--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   },
   "dependencies": {
     "@ponder/core": "^0.5.6",
+    "csv-writer": "^1.6.0",
     "hono": "^4.5.0",
     "viem": "^1.19.3"
   },
   "devDependencies": {
-    "@types/node": "^20.9.0",
+    "@types/node": "^20.14.14",
     "eslint": "^8.53.0",
     "eslint-config-ponder": "^0.5.6",
     "typescript": "^5.2.2"
