--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ponder/core": "^0.5.6",
     "csv-writer": "^1.6.0",
     "hono": "^4.5.0",
+    "node-fetch": "^3.3.2",
     "viem": "^1.19.3"
   },
   "devDependencies": {
