--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "ponder dev",
     "start": "ponder start",
     "codegen": "ponder codegen",
-    "lint": "eslint .",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
     "typecheck": "tsc"
   },
   "dependencies": {
@@ -19,7 +20,10 @@
     "@types/node": "^20.14.14",
     "eslint": "^8.53.0",
     "eslint-config-ponder": "^0.5.6",
-    "typescript": "^5.2.2"
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettier": "^3.3.3",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.14"
