--- a/EXAMPLE.env
+++ b/EXAMPLE.env
@@ -1,6 +1,7 @@
 # Mainnet RPC URL used for fetching blockchain data. Alchemy is recommended.
-PONDER_RPC_URL_1 = "https://eth-mainnet.g.alchemy.com/v2/YOUR_API_KEY"
+PONDER_RPC_URL_1="http://127.0.0.1:8545"
 # (Optional) Postgres database URL. If not provided, SQLite will be used. 
 DATABASE_URL=
 # Block number to start fetching data from.
 START_BLOCK=20370000
+STATUS=production
