--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@ponder/core": "^0.5.6",
-    "hono": "^4.5.0",
-    "viem": "^1.19.3"
+    "@ponder/core": "^0.6.2",
+    "hono": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.14",
