--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -2,5 +2,15 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+viaIR = true
+script="script"
+remmapings = [
+  "@openzeppelin=node_modules/@openzeppelin",
+]
+ignored_warnings_from = [
+  "node_modules/",
+]
 
+[rpc_endpoints]
+rpc_url = "http://127.0.0.1:8545"
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
