--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "typecheck": "tsc",
-    "start-anvil": "tsx ./src/lib/start-anvil.ts"
+    "start-anvil": "tsx ./src/lib/start-anvil.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@ponder/core": "^0.5.6",
@@ -19,12 +20,19 @@
     "viem": "^2.21.9"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.25.4",
+    "@types/jest": "^29.5.13",
     "@types/node": "^20.16.5",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.53.0",
     "eslint-config-ponder": "^0.5.6",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "jest": "^29.7.0",
+    "jest-config": "^29.7.0",
     "prettier": "^3.3.3",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.1",
     "typescript": "^5.3.3"
   },
