mid-commit: Wrong indexing on ponder, commiting in order to merge the new dev branch and hopefully fix the ponder indexing error.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "esModuleInterop": true,
     "isolatedModules": true,
     "allowSyntheticDefaultImports": true,
+    "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     // Language and environment
     "moduleResolution": "bundler",
