--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "typecheck": "tsc",
-    "start-anvil": "tsx ./src/lib/start-anvil.ts",
-    "test": "jest"
+    "start-anvil": "tsx ./test/lib/start-anvil.ts",
+    "test": "jest --detectOpenHandles",
+    "clear-database": "tsx ./test/lib/database/clearDatabase.script.ts"
   },
   "dependencies": {
     "@ponder/core": "^0.5.6",
@@ -23,6 +24,8 @@
     "@babel/preset-env": "^7.25.4",
     "@types/jest": "^29.5.13",
     "@types/node": "^20.16.5",
+    "@types/pg": "^8.11.10",
+    "axios": "^1.7.7",
     "babel-jest": "^29.7.0",
     "eslint": "^8.53.0",
     "eslint-config-ponder": "^0.5.6",
