--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "contracts/lib/forge-std"]
 	path = contracts/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "contracts-2/lib/forge-std"]
+	path = contracts-2/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
