--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "typecheck": "tsc",
     "test": "jest --detectOpenHandles",
     "clear-database": "tsx ./test/lib/database/clearDatabase.script.ts",
-    "locally:deploy-ens": "cd ./contracts && npm run locally:deploy-ens"
+    "locally:deploy-ens": "cd ./contracts && npm run locally:deploy-ens",
+    "prepare": "husky"
   },
   "dependencies": {
     "@ponder/core": "^0.6.22",
@@ -22,6 +23,8 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.25.4",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@types/jest": "^29.5.13",
     "@types/node": "^20.16.5",
     "@types/pg": "^8.11.10",
@@ -31,6 +34,7 @@
     "eslint-config-ponder": "^0.5.6",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
     "jest-config": "^29.7.0",
     "prettier": "^3.3.3",
