--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "build": "npx prisma generate && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "dev": "nest start --watch",
@@ -28,7 +28,7 @@
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^8.0.7",
-    "@prisma/client": "^5.21.1",
+    "@prisma/client": "^5.22.0",
     "@types/node-fetch": "^2.6.11",
     "@types/pg": "^8.11.10",
     "class-validator": "^0.14.1",
@@ -49,7 +49,7 @@
     "jest": "^29.7.0",
     "node-pg-migrate": "^7.8.0",
     "prettier": "^3.0.0",
-    "prisma": "^5.21.1",
+    "prisma": "^5.22.0",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
