--- a/package.json
+++ b/package.json
@@ -3,20 +3,23 @@
   "version": "1.0.0",
   "description": "DefenDAO Monorepo",
   "scripts": {
-    "build:server": "turbo run build --filter=@defendao/server",
-    "dev:server": "turbo run dev --filter=@defendao/server",
+    "build:server": "dotenv -- turbo run build --filter=@defendao/server",
+    "dev:server": "dotenv -- turbo run dev --filter=@defendao/server",
     "install:dashboard": "cd ./apps/dashboard && npm install",
     "install:indexer": "cd ./apps/indexer && npm install",
     "install:server": "cd ./apps/server && npm install",
-    "start:server":"turbo run start:prod --filter=@defendao/server",
-    "start:indexer": "turbo run start --filter=@defendao/indexer"
+    "start:server": "dotenv -- turbo run start:prod --filter=@defendao/server",
+    "start:indexer": "dotenv -- turbo run start --filter=@defendao/indexer"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "turbo": "^2.3.1",
     "@defendao/indexer": "./apps/indexer",
-    "@defendao/server": "./apps/server"
+    "@defendao/server": "./apps/server",
+    "turbo": "^2.3.1"
   },
-  "packageManager": "pnpm@9.14.2"
+  "packageManager": "pnpm@9.14.2",
+  "devDependencies": {
+    "dotenv-cli": "^7.4.4"
+  }
 }
