fix: fixing dockerfilePath variable;

--- a/apps/server/railway.toml
+++ b/apps/server/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "DOCKERFILE"
-dockerfilePath = "apps/api/Dockerfile"
+dockerfilePath = "apps/server/Dockerfile"
 
 [deploy]
 numReplicas = 1
