--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -18,8 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "apply-migration": "npx node-pg-migrate up -s gov-app",
-    "prisma:generate": "npx prisma generate"
+    "apply-migration": "npx node-pg-migrate up -s gov-app"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
