--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,10 +8,9 @@
   "scripts": {
     "build": "npx prisma generate && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
     "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "npx node-pg-migrate up -s gov-app && node dist/main",
+    "start": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -31,6 +30,7 @@
     "@prisma/client": "^5.22.0",
     "@types/node-fetch": "^2.6.11",
     "@types/pg": "^8.11.10",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "node-fetch": "^2.7.0"
   },
@@ -47,7 +47,6 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.7.0",
-    "node-pg-migrate": "^7.8.0",
     "prettier": "^3.0.0",
     "prisma": "^5.22.0",
     "ts-jest": "^29.2.5",
