--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "install:dashboard": "cd ./apps/dashboard && npm install",
     "install:indexer": "cd ./apps/indexer && npm install",
     "install:server": "cd ./apps/server && npm install",
-    "start:server": "dotenv -- turbo run start:prod --filter=@defendao/server",
-    "start:indexer": "dotenv -- turbo run start --filter=@defendao/indexer"
+    "start:server": "dotenv -- turbo run start --filter=@defendao/server",
+    "start:indexer": "dotenv -- turbo run start --filter=@defendao/indexer",
+    "apply-migration": "dotenv -- turbo run apply-migration --filter=@defendao/server"
   },
   "author": "",
   "license": "ISC",
