--- a/apps/indexer/package.json
+++ b/apps/indexer/package.json
@@ -15,7 +15,7 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@ponder/core": "^0.6.22",
+    "@ponder/core": "^0.7.11",
     "@viem/anvil": "^0.0.10",
     "hono": "^4.5.0",
     "viem": "^2.21.9"
@@ -29,6 +29,7 @@
     "@types/pg": "^8.11.10",
     "axios": "^1.7.7",
     "babel-jest": "^29.7.0",
+    "dotenv": "^16.4.5",
     "eslint": "^8.53.0",
     "eslint-config-ponder": "^0.5.6",
     "eslint-config-prettier": "^9.1.0",
