--- a/turbo.json
+++ b/turbo.json
@@ -35,6 +35,8 @@
       "persistent": true,
       "dependsOn": ["^build"]
     },
-    "apply-migration": {}
+    "apply-migration": {},
+    "restore-database": {},
+    "dump-database": {}
   }
 }
