--- a/apps/indexer/package.json
+++ b/apps/indexer/package.json
@@ -29,6 +29,7 @@
     "@types/pg": "^8.11.10",
     "axios": "^1.7.7",
     "babel-jest": "^29.7.0",
+    "dotenv": "^16.4.7",
     "eslint": "^8.53.0",
     "eslint-config-ponder": "^0.5.6",
     "eslint-config-prettier": "^9.1.0",
