feat: Altering dockerfile to have more heap space;

--- a/Dockerfile.indexer
+++ b/Dockerfile.indexer
@@ -16,6 +16,7 @@ ENV DATABASE_URL=$DATABASE_URL
 ENV PONDER_RPC_URL_1 = $PONDER_RPC_URL_1
 ENV START_BLOCK=$START_BLOCK
 ENV STATUS=$STATUS
+ENV NODE_OPTIONS="--max-old-space-size=8192"
 RUN npm i -g pnpm 
 RUN echo ${DATABASE_URL}
 ENV PNPM_HOME="/pnpm"
