feat: Adding dashboard for ponder metrics;

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "install:server": "cd ./apps/server && npm install",
     "start:server": "dotenv -- turbo run start --filter=@defendao/server",
     "start:indexer": "dotenv -- turbo run start --filter=@defendao/indexer",
+    "start:indexer-metrics": "dotenv -- turbo run start --filter=@defendao/indexer-metrics",
     "apply-migration": "dotenv -- turbo run apply-migration --filter=@defendao/server",
     "dump-database": "dotenv -- turbo run dump-database --filter=@defendao/indexer",
     "restore-database": "dotenv -- turbo run restore-database --filter=@defendao/indexer",
