--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@namehash/ens-utils": "^1.18.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@rainbow-me/rainbowkit": "^2.2.0",
     "@tanstack/react-query": "^5.59.16",
