--- a/apps/indexer/package.json
+++ b/apps/indexer/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "ponder dev",
-    "start": "ponder start --schema public",
+    "start": "psql -d $DATABASE_URL -c \"DROP SCHEMA public CASCADE;\" && ponder start --schema public",
     "codegen": "ponder codegen",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
