--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "dotenv -- turbo build",
     "build:server": "dotenv -- turbo run build --filter=@defendao/server",
     "build:dashboard": "dotenv -- turbo run build --filter=@defendao/dashboard",
+    "dev:indexer": "dotenv -- turbo run dev --filter=@defendao/indexer",
     "dev:server": "dotenv -- turbo run dev --filter=@defendao/server",
     "dev:dashboard": "dotenv -- turbo run dev --filter=@defendao/dashboard",
     "install:dashboard": "cd ./apps/dashboard && npm install",
@@ -15,6 +16,7 @@
     "start:dashboard": "dotenv -- turbo run start --filter=@defendao/dashboard",
     "start:indexer": "dotenv -- turbo run start --filter=@defendao/indexer",
     "start:server": "dotenv -- turbo run start --filter=@defendao/server",
+    "serve:indexer": "dotenv -- turbo run serve --filter=@defendao/indexer",
     "start:indexer-metrics": "dotenv -- turbo run start --filter=@defendao/indexer-metrics",
     "apply-migration": "dotenv -- turbo run apply-migration --filter=@defendao/server",
     "dump-database": "dotenv -- turbo run dump-database --filter=@defendao/indexer",
