--- a/turbo.json
+++ b/turbo.json
@@ -35,6 +35,10 @@
       "persistent": true,
       "dependsOn": ["^build"]
     },
+    "serve": {
+      "cache": false,
+      "persistent": true
+    },
     "apply-migration": {},
     "restore-database": {},
     "dump-database": {}
