--- a/Dockerfile.indexer
+++ b/Dockerfile.indexer
@@ -21,6 +21,10 @@ RUN npm i -g pnpm
 RUN echo ${DATABASE_URL}
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
+# Install PostgreSQL and removing files from apt-get to reduce container size
+RUN apt-get update && apt-get install -y \
+    postgresql-client \
+    && rm -rf /var/lib/apt/lists/*
 WORKDIR /app/
 COPY --from=pruner /app/out/full/ .
 RUN pnpm install
