--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -19,9 +19,9 @@
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "ethers": "^5",
+    "ethers": "^6.13.5",
     "lucide-react": "^0.453.0",
-    "next": "14.2.3",
+    "next": "^14.2.23",
     "next-auth": "^4.24.10",
     "react": "^18",
     "react-dom": "^18",
