feat: adding command to start indexer after dropping ponder_sync schema;

--- a/apps/indexer/package.json
+++ b/apps/indexer/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "psql -d $DATABASE_URL -c \"DROP SCHEMA IF EXISTS public CASCADE;\" && ponder dev --schema public",
     "start": "psql -d $DATABASE_URL -c \"DROP SCHEMA IF EXISTS public CASCADE;\" && ponder start --schema public",
+    "start-raw": "psql -d $DATABASE_URL -c \"DROP SCHEMA IF EXISTS public CASCADE; DROP SCHEMA IF EXISTS ponder_sync CASCADE\" && ponder start --schema public",
     "codegen": "ponder codegen",
     "serve": "ponder serve --schema public",
     "lint": "eslint . --ext .ts",
