--- a/turbo.json
+++ b/turbo.json
@@ -25,6 +25,11 @@
       "persistent": true,
       "dependsOn": ["^build"]
     },
+    "start-raw": {
+      "cache": false,
+      "persistent": true,
+      "dependsOn": ["^build"]
+    },
     "install": {},
     "dev": {
       "persistent": true,
