--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "defendao",
+  "name": "anticapture",
   "version": "0.0.1",
-  "description": "DefenDAO Monorepo",
+  "description": "Anticapture Monorepo",
   "scripts": {
     "start": "dotenv -- turbo start",
     "build": "dotenv -- turbo build",
-    "build:dashboard": "dotenv -- turbo run build --filter=@defendao/dashboard",
-    "dev:indexer": "dotenv -- turbo run dev --filter=@defendao/indexer",
-    "dev:dashboard": "dotenv -- turbo run dev --filter=@defendao/dashboard",
+    "build:dashboard": "dotenv -- turbo run build --filter=@anticapture/dashboard",
+    "dev:indexer": "dotenv -- turbo run dev --filter=@anticapture/indexer",
+    "dev:dashboard": "dotenv -- turbo run dev --filter=@anticapture/dashboard",
     "install:dashboard": "cd ./apps/dashboard && npm install",
     "install:indexer": "cd ./apps/indexer && npm install",
-    "start:dashboard": "dotenv -- turbo run start --filter=@defendao/dashboard",
-    "start:indexer": "dotenv -- turbo run start --filter=@defendao/indexer",
-    "start:server": "dotenv -- turbo run serve --filter=@defendao/indexer",
-    "serve:indexer": "dotenv -- turbo run serve --filter=@defendao/indexer",
-    "start:indexer-metrics": "dotenv -- turbo run start --filter=@defendao/indexer-metrics",
-    "start-raw:indexer":"dotenv -- turbo run start-raw --filter=@defendao/indexer",
-    "dump-database": "dotenv -- turbo run dump-database --filter=@defendao/indexer",
-    "restore-database": "dotenv -- turbo run restore-database --filter=@defendao/indexer",
+    "start:dashboard": "dotenv -- turbo run start --filter=@anticapture/dashboard",
+    "start:indexer": "dotenv -- turbo run start --filter=@anticapture/indexer",
+    "start:server": "dotenv -- turbo run serve --filter=@anticapture/indexer",
+    "serve:indexer": "dotenv -- turbo run serve --filter=@anticapture/indexer",
+    "start:indexer-metrics": "dotenv -- turbo run start --filter=@anticapture/indexer-metrics",
+    "start-raw:indexer":"dotenv -- turbo run start-raw --filter=@anticapture/indexer",
+    "dump-database": "dotenv -- turbo run dump-database --filter=@anticapture/indexer",
+    "restore-database": "dotenv -- turbo run restore-database --filter=@anticapture/indexer",
     "start-anvil": "dotenv -- bash -c 'anvil --fork-url \"$ALCHEMY_RPC_URL_1\"'",
-    "lint:fix": "dotenv -- turbo run lint:fix --filter=@defendao/indexer"
+    "lint:fix": "dotenv -- turbo run lint:fix --filter=@anticapture/indexer"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@defendao/dashboard": "./apps/dashboard",
-    "@defendao/indexer": "./apps/indexer",
+    "@anticapture/dashboard": "./apps/dashboard",
+    "@anticapture/indexer": "./apps/indexer",
     "@hono/swagger-ui": "^0.5.0",
     "@scalar/hono-api-reference": "^0.5.165",
     "pino-pretty": "^13.0.0",
