--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -25,6 +25,7 @@
     "next-auth": "^4.24.10",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.15.1",
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
