--- a/apps/indexer/package.json
+++ b/apps/indexer/package.json
@@ -23,6 +23,7 @@
     "@viem/anvil": "^0.0.10",
     "hono": "^4.5.0",
     "ponder": "^0.8.5",
+    "redis": "^4.7.0",
     "viem": "^2.21.9"
   },
   "devDependencies": {
