fix: Fixing more imports, lint fix, deprecated function calls; fix: moving setup drizzle to server start, will not belong to indexer initialization;

--- a/apps/indexer/package.json
+++ b/apps/indexer/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "npm run drop-public && npm run setup-drizzle && ponder dev --schema public",
-    "start": "npm run drop-public && npm run setup-drizzle && ponder start --schema public",
-    "start-raw": "npm run drop-all-schemas && npm run setup-drizzle && ponder start --schema public",
+    "dev": "npm run drop-public && ponder dev --schema public",
+    "start": "npm run drop-public && ponder start --schema public",
+    "start-raw": "npm run drop-all-schemas && ponder start --schema public",
     "codegen": "ponder codegen",
-    "serve": "ponder serve --schema public",
+    "serve": "npm run setup-drizzle && ponder serve --schema public",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "typecheck": "tsc",
