--- a/apps/indexer/package.json
+++ b/apps/indexer/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "npm run drop-public && ponder dev --schema public",
-    "start": "npm run drop-public && ponder start --schema public",
-    "start-raw": "npm run drop-all-schemas && ponder start --schema public",
+    "dev": "ponder dev --schema public",
+    "start": "ponder start --schema public",
+    "start-raw": "npm run drop-public && ponder start --schema public",
     "codegen": "ponder codegen",
     "serve": "npm run setup-drizzle && ponder serve --schema public",
     "lint": "eslint . --ext .ts",
@@ -17,9 +17,9 @@
     "prepare": "husky",
     "dump-database": "rm -rf dump && pg_dump $DATABASE_URL -n ponder_sync > dump",
     "restore-database": "psql -d $DATABASE_URL < dump",
-    "drop-public": "psql -d $DATABASE_URL -c \"DROP SCHEMA IF EXISTS public CASCADE;\"",
+    "drop-public": "psql -d $DATABASE_URL -c 'DROP SCHEMA public CASCADE;'",
     "drop-all-schemas": "psql -d $DATABASE_URL -c \"DROP SCHEMA IF EXISTS public CASCADE; DROP SCHEMA IF EXISTS ponder_sync CASCADE\"",
-    "setup-drizzle": "drizzle-kit generate && drizzle-kit migrate"
+    "setup-drizzle": "drizzle-kit migrate"
   },
   "dependencies": {
     "@hono/swagger-ui": "^0.5.0",
