--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest"
+    "lint": "next lint"
   },
   "dependencies": {
     "@namehash/ens-utils": "^1.18.0",
@@ -34,18 +33,15 @@
     "wagmi": "^2.12.25"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "jest": "^29.7.0",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.1",
-    "ts-jest": "^29.2.6",
     "typescript": "^5"
   }
 }
