feat: Adding support to coingecko calls to fetch historical token data, like prices, total volume and market cap; refactor: Refactoring Redis service into a singleton; feat: Adding redis to docker-compose;

--- a/turbo.json
+++ b/turbo.json
@@ -8,7 +8,8 @@
     "DUNE_API_KEY",
     "START_BLOCK",
     "STATUS",
-    "REDIS_URL"
+    "REDIS_URL",
+    "COINGECKO_API_KEY"
   ],
   "globalDependencies": [".env", "test.ts", "./migrations"],
   "tasks": {
