--- a/compose.yaml
+++ b/compose.yaml
@@ -9,3 +9,10 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: admin
       POSTGRES_DB: postgres
+
+  redis:
+    image: redis:latest
+    container_name: gateway-redis
+    ports:
+      - '6379:6379'
+    restart: always
