--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18",
     "react-intersection-observer": "^9.15.1",
     "recharts": "^2.15.0",
+    "swr": "^2.3.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.21.34",
