--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -17,6 +17,7 @@
     "@rainbow-me/rainbowkit": "^2.2.0",
     "@tanstack/react-query": "^5.59.16",
     "@tanstack/react-table": "^8.20.5",
+    "axios": "^1.8.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "ethers": "^6.13.5",
