feat: Finished to add Arbitrum integration;

--- a/turbo.json
+++ b/turbo.json
@@ -4,6 +4,8 @@
     "NODE_ENV",
     "DATABASE_URL",
     "PONDER_RPC_URL_1",
+    "PONDER_RPC_URL_ARB_1",
+    "PONDER_RPC_URL_ETH_1",
     "DUNE_API_URL",
     "DUNE_API_KEY",
     "START_BLOCK",
