--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
