--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -30,6 +30,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.15.1",
+    "react-jazzicon": "^1.0.4",
     "recharts": "^2.15.0",
     "swr": "^2.3.2",
     "tailwind-merge": "^2.5.4",
