--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -45,6 +45,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "eslint-plugin-import": "^2.31.0",
     "jest": "^29.7.0",
     "postcss": "^8",
     "prettier": "^3.4.2",
