fix: Fixing lint errors;

--- a/apps/dashboard/.eslintrc.json
+++ b/apps/dashboard/.eslintrc.json
@@ -2,7 +2,11 @@
   "extends": "next/core-web-vitals",
   "plugins": ["import"],
   "rules": {
-    "import/no-relative-parent-imports": "error",
-    "import/no-relative-packages": "error"
+    "no-restricted-imports": [
+      "error",
+      {
+        "patterns": ["../*", "./*"]
+      }
+    ]
   }
 }
