fix: gateway update schema before start

--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "supergraph": "mesh-compose -o supergraph.graphql",
-    "start": "pnpm supergraph && hive-gateway supergraph"
+    "start": "npm run supergraph && hive-gateway supergraph"
   },
   "keywords": [],
   "author": "",
