--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@graphql-hive/gateway": "^1.13.6",
     "@graphql-mesh/compose-cli": "^1.4.7",
+    "@omnigraph/openapi": "^0.109.7",
     "dotenv": "^16.4.7"
   }
 }
