--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@anticapture/dashboard": "./apps/dashboard",
     "@anticapture/indexer": "./apps/indexer",
+    "commitlint": "^19.8.0",
     "turbo": "^2.3.1"
   },
   "packageManager": "pnpm@9.14.2",
