--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "prepare": "husky"
   },
   "license": "MIT",
-  "packageManager": "pnpm@9.14.2",
+  "packageManager": "pnpm@10.10.0",
   "devDependencies": {
-    "@types/node": "^20.16.5",
-    "turbo": "^2.3.1",
-    "husky": "^9.1.6",
-    "dotenv-cli": "^7.4.4",
     "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0"
+    "@commitlint/config-conventional": "^19.5.0",
+    "@types/node": "^20.16.5",
+    "dotenv-cli": "^7.4.4",
+    "husky": "^9.1.6",
+    "turbo": "^2.3.1"
   }
 }
