--- a/apps/petition/package.json
+++ b/apps/petition/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@hono/node-server": "^1.14.1",
+    "axios": "^1.9.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
     "hono": "^4.5.0",
