--- a/apps/petition/package.json
+++ b/apps/petition/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "start": "NODE_ENV=production tsx src/index.ts",
+    "db:migrate": "npx drizzle-kit push"
   },
   "keywords": [],
   "author": "",
