--- a/apps/petition/package.json
+++ b/apps/petition/package.json
@@ -25,6 +25,7 @@
     "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.31.0",
     "tsx": "^4.19.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.2"
   }
 }
