--- a/apps/petition/package.json
+++ b/apps/petition/package.json
@@ -12,11 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hono/node-server": "^1.14.1",
+    "@fastify/cors": "^11.0.1",
+    "@fastify/swagger": "^9.5.0",
+    "@fastify/swagger-ui": "^5.2.2",
+    "fastify": "^5.3.2",
+    "fastify-type-provider-zod": "^4.0.2",
     "axios": "^1.9.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
-    "hono": "^4.5.0",
     "pg": "^8.15.6",
     "viem": "^2.28.0",
     "zod": "^3.24.2"
