test: petition service

--- a/apps/petition/package.json
+++ b/apps/petition/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "start": "NODE_ENV=production tsx src/index.ts",
-    "db:migrate": "npx drizzle-kit push"
+    "db:migrate": "npx drizzle-kit push",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
