--- a/apps/petition/package.json
+++ b/apps/petition/package.json
@@ -16,11 +16,11 @@
     "@fastify/cors": "^11.0.1",
     "@fastify/swagger": "^9.5.0",
     "@fastify/swagger-ui": "^5.2.2",
-    "fastify": "^5.3.2",
-    "fastify-type-provider-zod": "^4.0.2",
     "axios": "^1.9.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
+    "fastify": "^5.3.2",
+    "fastify-type-provider-zod": "^4.0.2",
     "pg": "^8.15.6",
     "viem": "^2.28.0",
     "zod": "^3.24.2"
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.31.0",
+    "supertest": "^7.1.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
     "vitest": "^3.1.2"
