fix: delay petition dependency between anticapture api

--- a/apps/api-gateway/.env.example
+++ b/apps/api-gateway/.env.example
@@ -1,2 +1,2 @@
-PETITION_API_URL=http://127.0.0.1:3000
-DAO_API_ENS=https://ens-api-dev-0561.up.railway.app
+PETITION_API_URL=http://localhost:5000/docs/json
+DAO_API_ENS=https://localhost:3000
