--- a/apps/dashboard/.env.example
+++ b/apps/dashboard/.env.example
@@ -2,3 +2,4 @@ NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
 NEXT_PUBLIC_ALCHEMY_KEY=
 NEXT_PUBLIC_BASE_URL=
 NEXT_PUBLIC_SITE_URL=
+NEXT_PUBLIC_PETITION_URL=
