feat: api gateway custom resolver votingPower

--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "graph": "mesh-compose -o supergraph.graphql",
-    "start": "hive-gateway supergraph"
+    "start": "node src/index.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
