--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "tsx watch src/index.ts",
     "start": "node src/index.ts",
     "build": "tsc"
   },
