--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -14,6 +14,7 @@
     "@namehash/ens-utils": "^1.18.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
