--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -11,18 +11,17 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@graphql-hive/gateway": "^1.13.6",
+  "devDependencies": {
     "@graphql-mesh/cli": "^0.100.4",
-    "@graphql-mesh/compose-cli": "^1.4.7",
+    "tsx": "^4.19.4"
+  },
+  "dependencies": {
     "@graphql-mesh/config": "^0.108.4",
     "@graphql-mesh/graphql": "^0.104.3",
     "@graphql-mesh/http": "^0.106.3",
-    "@graphql-mesh/openapi": "^0.109.7",
+    "@graphql-mesh/openapi": "^0.109.8",
     "@graphql-mesh/runtime": "^0.106.3",
     "@graphql-mesh/types": "^0.104.3",
-    "@omnigraph/openapi": "^0.109.7",
-    "dotenv": "^16.4.7",
-    "tsx": "^4.19.3"
+    "dotenv": "^16.5.0"
   }
 }
