--- a/apps/indexer/package.json
+++ b/apps/indexer/package.json
@@ -11,21 +11,18 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@hono/swagger-ui": "^0.5.0",
-    "@hono/zod-validator": "^0.5.0",
-    "@viem/anvil": "^0.0.10",
+    "@hono/zod-openapi": "^0.19.6",
     "drizzle-kit": "^0.31.0",
     "drizzle-orm": "^0.39.3",
     "hono": "^4.5.0",
-    "ioredis": "^5.5.0",
     "ponder": "^0.9.19",
     "viem": "^2.21.9",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "axios": "^1.7.7"
   },
   "devDependencies": {
     "@types/node": "^20.16.5",
     "@types/pg": "^8.11.10",
-    "axios": "^1.7.7",
     "dotenv": "^16.4.7",
     "eslint": "^8.53.0",
     "eslint-config-ponder": "^0.5.6",
