--- a/apps/dashboard/.eslintrc.json
+++ b/apps/dashboard/.eslintrc.json
@@ -1,10 +1,16 @@
 {
-  "extends": ["next/core-web-vitals", "plugin:storybook/recommended"],
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:storybook/recommended"
+  ],
   "rules": {
     "no-restricted-imports": [
       "error",
       {
-        "patterns": ["../*", "./*"]
+        "patterns": [
+          "../*",
+          "./*"
+        ]
       }
     ]
   }
