--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -48,15 +48,19 @@
     "@storybook/blocks": "^8.6.14",
     "@storybook/experimental-addon-test": "^8.6.14",
     "@storybook/nextjs": "^8.6.14",
+    "@storybook/experimental-nextjs-vite": "^8.6.14",
     "@storybook/react": "^8.6.14",
+    "@storybook/test": "^8.6.14",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
     "@types/node": "^20",
     "@types/react": "19.1.4",
     "@types/react-dom": "19.1.5",
     "eslint": "^8",
-    "eslint-plugin-storybook": "^0.12.0",
     "eslint-config-next": "15.3.2",
+    "@vitest/browser": "^3.1.3",
+    "@vitest/coverage-v8": "^3.1.3",
+    "eslint-plugin-storybook": "^0.12.0",
     "jest": "^29.7.0",
     "playwright": "^1.52.0",
     "postcss": "^8",
@@ -66,9 +70,5 @@
     "tailwindcss": "^4.1.7",
     "ts-jest": "^29.2.6",
     "typescript": "^5"
-  },
-  "overrides": {
-    "@types/react": "19.1.4",
-    "@types/react-dom": "19.1.5"
   }
 }
