--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -50,7 +50,9 @@
     "@storybook/blocks": "^8.6.14",
     "@storybook/experimental-addon-test": "^8.6.14",
     "@storybook/nextjs": "^8.6.14",
+    "@storybook/experimental-nextjs-vite": "^8.6.14",
     "@storybook/react": "^8.6.14",
+    "@storybook/test": "^8.6.14",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
     "@types/node": "^20",
