--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -3,8 +3,8 @@
   "version": "0.3.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
@@ -66,5 +66,9 @@
     "tailwindcss": "^4.1.7",
     "ts-jest": "^29.2.6",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.1.4",
+    "@types/react-dom": "19.1.5"
   }
 }
