--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -3,8 +3,8 @@
   "version": "0.3.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
@@ -27,9 +27,9 @@
     "clsx": "^2.1.1",
     "ethers": "^6.13.5",
     "lucide-react": "^0.453.0",
-    "next": "^14.2.23",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "15.3.2",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-intersection-observer": "^9.15.1",
     "react-jazzicon": "^1.0.4",
     "recharts": "^2.15.0",
@@ -43,10 +43,10 @@
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.1.4",
+    "@types/react-dom": "19.1.5",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "15.3.2",
     "jest": "^29.7.0",
     "postcss": "^8",
     "prettier": "^3.4.2",
@@ -54,5 +54,9 @@
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.6",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.1.4",
+    "@types/react-dom": "19.1.5"
   }
 }
