--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -44,19 +44,17 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.6",
     "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
     "@storybook/addon-onboarding": "^8.6.14",
     "@storybook/blocks": "^8.6.14",
     "@storybook/experimental-addon-test": "^8.6.14",
-    "@storybook/experimental-nextjs-vite": "^8.6.14",
+    "@storybook/nextjs": "^8.6.14",
     "@storybook/react": "^8.6.14",
-    "@storybook/test": "^8.6.14",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@vitest/browser": "^3.1.3",
-    "@vitest/coverage-v8": "^3.1.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-plugin-storybook": "^0.12.0",
@@ -68,7 +66,6 @@
     "storybook": "^8.6.14",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.6",
-    "typescript": "^5",
-    "vitest": "^3.1.3"
+    "typescript": "^5"
   }
 }
