--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -49,6 +49,7 @@
     "@storybook/experimental-addon-test": "^8.6.14",
     "@storybook/nextjs": "^8.6.14",
     "@storybook/react": "^8.6.14",
+    "@tailwindcss/postcss": "^4.1.7",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
     "@types/node": "^20",
